# IC-Algorithm

./: .gitignore  CMakeLists.txt  README.md
dfg/: dfg.cpp  dfg.h  parser.cpp  parser.h  validator.cpp  validator.h
docs/: dfg_format.md  document.md  formulation.md
docs/ieee-template/: main.typ  make_figures.py
evaluation/: slide_claim_summary.md
evaluation/data/: 01_vector_pipeline.dfg  02_cnn_pipeline.dfg  03_residual_block.dfg  04_binary_tree_reduce.dfg  05_transform_attention.dfg  06_memory_stream_mix.dfg
evaluation/mode_comparison/: summary.csv
evaluation/mode_comparison/baseline/: 01_vector_pipeline.json  02_cnn_pipeline.json  03_residual_block.json  04_binary_tree_reduce.json  05_transform_attention.json  06_memory_stream_mix.json
evaluation/mode_comparison/graph/: 01_vector_pipeline.json  02_cnn_pipeline.json  03_residual_block.json  04_binary_tree_reduce.json  05_transform_attention.json  06_memory_stream_mix.json
evaluation/scalability/: summary.csv
evaluation/scalability/data/: scale_025.dfg  scale_050.dfg  scale_075.dfg  scale_100.dfg
evaluation/scalability/solutions/: scale_025.json  scale_050.json  scale_075.json  scale_100.json
evaluation/scripts/: compare_modes.py  generate_scalability_workloads.py  run_scalability.py
evaluation/solutions/: 01_vector_pipeline.json  02_cnn_pipeline.json  03_residual_block.json  04_binary_tree_reduce.json  05_transform_attention.json  06_memory_stream_mix.json
examples/: binary_tree_reduce.dfg  cnn_3layer.dfg  diamond.dfg  mem_compute_mix.dfg  resnet_tiny_block.dfg  simple_chain.dfg  stream_conflict.dfg
model/: hardware.h  ilp_solver.cpp  ilp_solver.h  objective.cpp  objective.h  preprocess.cpp  preprocess.h  solution.cpp  solution.h  solution_checker.cpp  solution_checker.h  variables.cpp  variables.h
model/constraints/: legal_slice.cpp  legal_slice.h  slice_icu.cpp  slice_icu.h  stream.cpp  stream.h  timing.cpp  timing.h
openspec/changes/add-graph-preprocess-mode/: design.md  proposal.md  tasks.md
openspec/changes/add-graph-preprocess-mode/specs/graph-preprocessed-ilp/: spec.md
openspec/changes/meet-slide-claims/: design.md  proposal.md  tasks.md
openspec/changes/meet-slide-claims/specs/slide-claim-validation/: spec.md
tests/: CMakeLists.txt  test_dfg_parser.cpp  test_dfg_validator.cpp  test_preprocess.cpp  test_small_solve.cpp  test_solution_checker.cpp
tools/: solve.cpp
visualization/: exporter.cpp  exporter.h  gantt_plot.py  placement_plot.py  schedule_route_plot.py  stream_plot.py
